--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -60,7 +60,7 @@ hapi:
     openapi_enabled: true
     ### This is the FHIR version. Choose between, DSTU2, DSTU3, R4 or R5
     fhir_version: R4
-#    fhir_version: R5
+    #    fhir_version: R5
     ### enable to use the ApacheProxyAddressStrategy which uses X-Forwarded-* headers
     ### to determine the FHIR server address
     #   use_apache_address_strategy: false
@@ -93,7 +93,7 @@ hapi:
     #    cql_enabled: true
     #    default_encoding: JSON
     #    default_pretty_print: true
-    #    default_page_size: 20
+    default_page_size: 100
     #    delete_expunge_enabled: true
     #    enable_repository_validating_interceptor: false
     enable_index_missing_fields: true
@@ -104,7 +104,7 @@ hapi:
     advanced_lucene_indexing: false
     #    enforce_referential_integrity_on_delete: false
     # This is an experimental feature, and does not fully support _total and other FHIR features.
-#    enforce_referential_integrity_on_delete: false
+    #    enforce_referential_integrity_on_delete: false
     #    enforce_referential_integrity_on_write: false
     #    etag_support_enabled: true
     #    expunge_enabled: true
@@ -114,8 +114,8 @@ hapi:
     #    filter_search_enabled: true
     #    graphql_enabled: true
     #    narrative_enabled: true
-#    local_base_urls:
-#      - https://hapi.fhir.org/baseR4
+    #    local_base_urls:
+    #      - https://hapi.fhir.org/baseR4
     mdm_enabled: true
     partitioning:
       allow_references_across_partitions: false
@@ -132,10 +132,10 @@ hapi:
     search-coord-queue-capacity: 200
 
     # Threadpool size for BATCH'ed GETs in a bundle.
-#    bundle_batch_pool_size: 10
-#    bundle_batch_pool_max_size: 50
+    #    bundle_batch_pool_size: 10
+    #    bundle_batch_pool_max_size: 50
 
-#    logger:
+    #    logger:
     #      error_format: 'ERROR - ${requestVerb} ${requestUrl}'
     #      format: >-
     #        Path[${servletPath}] Source[${requestHeader.x-forwarded-for}]
@@ -145,12 +145,12 @@ hapi:
     #      log_exceptions: true
     #      name: fhirtest.access
     #    max_binary_size: 104857600
-    #    max_page_size: 200
+    max_page_size: 200
     #    retain_cached_searches_mins: 60
     #    reuse_cached_search_results_millis: 60000
-#    tester:
-#      home:
-##        id: home
+    #    tester:
+    #      home:
+    #        id: home
     #        name: Local Tester
     #        server_address: 'http://localhost:8080/iis-sandbox-jpa/fhir/overlay-test'
     #        refuse_to_fetch_third_party_urls: false
