--- a/pom.xml
+++ b/pom.xml
@@ -675,7 +675,7 @@
             <id>dev</id>
             <properties>
                 <spring.profiles.active>dev</spring.profiles.active>
-                <mysql.hibernate.connection.host>localhost:3307</mysql.hibernate.connection.host>
+                <mysql.hibernate.connection.host>localhost</mysql.hibernate.connection.host>
                 <jpa.properties.hibernate.dialect>ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
                 </jpa.properties.hibernate.dialect>
                 <maven.test.skip>true</maven.test.skip>
