--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -168,15 +168,15 @@ hapi:
     subscription:
       resthook_enabled: true
     #     comma-separated package names, will be @ComponentScan'ed by Spring to allow for creating custom Spring beans
-    custom-bean-packages: ca.uhn.fhir.jpa.starter.interceptors
+    custom-bean-packages: org.immregistries.iis.kernal.fhir.interceptors
 
     # comma-separated list of fully qualified interceptor classes.
     # classes listed here will be fetched from the Spring context when combined with 'custom-bean-packages',
     # or will be instantiated via reflection using an no-arg contructor; then registered with the server
     custom-interceptor-classes:
-      #      ca.uhn.fhir.jpa.starter.interceptors.PartitionCreationInterceptor, MADE IN SERVERCONFIG INSTEAD
-      ca.uhn.fhir.jpa.starter.interceptors.MdmCustomInterceptor,
-      ca.uhn.fhir.jpa.starter.interceptors.SessionAuthorizationInterceptor
+      #      org.immregistries.iis.kernal.fhir.interceptors.PartitionCreationInterceptor, MADE IN SERVERCONFIG INSTEAD
+      org.immregistries.iis.kernal.fhir.interceptors.MdmCustomInterceptor,
+      org.immregistries.iis.kernal.fhir.interceptors.SessionAuthorizationInterceptor
 
 #      websocket_enabled: false
 #      email:
