--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -176,6 +176,7 @@ hapi:
     custom-interceptor-classes:
       #      org.immregistries.iis.kernal.fhir.interceptors.PartitionCreationInterceptor, MADE IN SERVERCONFIG INSTEAD
       org.immregistries.iis.kernal.fhir.interceptors.MdmCustomInterceptor,
+      org.immregistries.iis.kernal.fhir.interceptors.IdentifierSolverInterceptor,
       org.immregistries.iis.kernal.fhir.interceptors.SessionAuthorizationInterceptor
 
 #      websocket_enabled: false
