--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,7 +10,7 @@ management:
         include: "health,prometheus"
 server:
   servlet:
-    contextPath: "/iis-sandbox-jpa"
+    contextPath: "/iis"
 spring:
   profiles:
     active: '@spring.profiles.active@'
@@ -152,7 +152,7 @@ hapi:
     #      home:
     #        id: home
     #        name: Local Tester
-    #        server_address: 'http://localhost:8080/iis-sandbox-jpa/fhir/overlay-test'
+    #        server_address: 'http://localhost:8080/iis/fhir/overlay-test'
     #        refuse_to_fetch_third_party_urls: false
     #        fhir_version: R5
     #      global:
