--- a/pom.xml
+++ b/pom.xml
@@ -652,24 +652,23 @@
             </activation>
             <properties>
                 <spring.profiles.active>prod</spring.profiles.active>
-                <iis.mysql.hibernate.connection.url>jdbc:mysql://localhost/iis_alongside_jpa
-                </iis.mysql.hibernate.connection.url>
+                <iis.mysql.hibernate.connection.url>jdbc:mysql://localhost/iis_alongside_jpa</iis.mysql.hibernate.connection.url>
                 <jpa.properties.hibernate.dialect>ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
                 </jpa.properties.hibernate.dialect>
                 <maven.test.skip>true</maven.test.skip>
             </properties>
         </profile>
-        <profile>
-            <id>docker</id>
-            <properties>
-                <spring.profiles.active>prod</spring.profiles.active>
-                <iis.mysql.hibernate.connection.url>jdbc:mysql://iis-sandbox-mysql:3306/iis_alongside_jpa
-                </iis.mysql.hibernate.connection.url>
-                <jpa.properties.hibernate.dialect>ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
-                </jpa.properties.hibernate.dialect>
-                <maven.test.skip>true</maven.test.skip>
-            </properties>
-        </profile>
+<!--        <profile>-->
+<!--            <id>docker</id>-->
+<!--            <properties>-->
+<!--                <spring.profiles.active>prod</spring.profiles.active>-->
+<!--                <iis.mysql.hibernate.connection.url>jdbc:mysql://iis-sandbox-mysql:3306/iis_alongside_jpa-->
+<!--                </iis.mysql.hibernate.connection.url>-->
+<!--                <jpa.properties.hibernate.dialect>ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect-->
+<!--                </jpa.properties.hibernate.dialect>-->
+<!--                <maven.test.skip>true</maven.test.skip>-->
+<!--            </properties>-->
+<!--        </profile>-->
         <profile>
             <id>dev</id>
             <properties>
