--- a/pom.xml
+++ b/pom.xml
@@ -77,16 +77,34 @@
                     <groupId>javax.servlet</groupId>
                     <artifactId>servlet-api</artifactId>
                 </exclusion>
-                <exclusion>
-                    <groupId>com.sun.xml.bind</groupId>
-                    <artifactId>jaxb-core</artifactId>
-                </exclusion>
-<!--                <exclusion>-->
-<!--                    <groupId>com.sun.xml.bind</groupId>-->
-<!--                    <artifactId>jaxb-impl</artifactId>-->
-<!--                </exclusion>-->
+                <!--                <exclusion>-->
+                <!--                    <groupId>com.sun.xml.bind</groupId>-->
+                <!--                    <artifactId>jaxb-core</artifactId>-->
+                <!--                </exclusion>-->
+                <!--                <exclusion>-->
+                <!--                    <groupId>com.sun.xml.bind</groupId>-->
+                <!--                    <artifactId>jaxb-impl</artifactId>-->
+                <!--                </exclusion>-->
             </exclusions>
         </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>javax.xml.bind</groupId>-->
+        <!--            <artifactId>jaxb-api</artifactId>-->
+        <!--            <version>2.3.0</version>-->
+        <!--        </dependency>-->
+
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+
+        <!--        <dependency>-->
+        <!--            <groupId>com.sun.xml.bind</groupId>-->
+        <!--            <artifactId>jaxb-xjc</artifactId>-->
+        <!--            <version>4.0.2</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.immregistries.vfa</groupId>
