--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>${project.version}</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-oauth2-client</artifactId>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.immregistries</groupId>
             <artifactId>smm-tester</artifactId>
