--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,6 +12,12 @@ server:
   servlet:
     contextPath: "/iis"
 spring:
+  oauth2:
+    client:
+      registration:
+        gituhub:
+          client-id: 09a6c6915895bf8400db
+          client-secret: fc50e940f07d79db61d340f322accae582e6c933
   profiles:
     active: '@spring.profiles.active@'
   main:
