--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <properties>
         <java.version>11</java.version>
+<!--        <spring.version>6.1.1</spring.version>-->
     </properties>
 
     <prerequisites>
@@ -55,14 +56,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
             <version>${spring_boot_version}</version>
-
         </dependency>
 
 
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-oauth2-client</artifactId>
-            <version>6.1.1</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+            <version>${spring_boot_version}</version>
         </dependency>
 
         <dependency>
