--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,12 +12,17 @@ server:
   servlet:
     contextPath: "/iis"
 spring:
-  oauth2:
-    client:
-      registration:
-        github:
-          client-id: 09a6c6915895bf8400db
-          client-secret: fc50e940f07d79db61d340f322accae582e6c933
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            client-id: 09a6c6915895bf8400db
+            client-secret: fc50e940f07d79db61d340f322accae582e6c933
+            scope: read:user,user:email
+            token-uri: https://api.github.com/login/oauth/access_token
+            authorization-uri: https://api.github.com/login/oauth/authorize
+            user-info-uri: https://api.github.com/user
   profiles:
     active: '@spring.profiles.active@'
   main:
