--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>ca.uhn.hapi.fhir</groupId>
         <artifactId>hapi-fhir</artifactId>
-        <version>6.8.3</version>
+        <version>6.8.3-SUB</version>
     </parent>
 
     <artifactId>iis-sandbox</artifactId>
