--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -216,11 +216,12 @@ hapi:
 spring:
   config.activate.on-profile: prod
   datasource:
-    url: jdbc:postgresql://localhost:5432/hapi_fhir_iis
+    url: '@SPRING_DATASOURCE_URL@'
+#    url: '${spring.datasource.url}'
+#    url: ${spring.datasource.url}
     username: hapi_iis_web
     password: SicMundusCreatusEst
     driver-class-name: org.postgresql.Driver
-#jpa.properties.hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
 #  set in pom.xml TODO see why it sometimes does not work
 
 ## Dev profile only properties to set up with H2
@@ -232,4 +233,3 @@ spring:
     username: sa
     password: null
     driverClassName: org.h2.Driver
-#jpa.properties.hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect set in pom.xml
