--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,12 @@ management:
 server:
   servlet:
     contextPath: "/iis"
+iis:
+  api:
+    app:
+      secret: "LeVentNousPorterasT0utDizp4ra1tra"
+      jwtExpirationMs: 30000
+#        TODO change secret
 spring:
   security:
     oauth2:
