--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,19 @@ services:
     image: postgres:13-alpine
     container_name: hapi-fhir-postgres
     restart: always
+    healthcheck:
+      test: pg_isready -d hapi_fhir_iis -U $$POSTGRES_USER
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
     environment:
       POSTGRES_DB: "hapi_fhir_iis"
       POSTGRES_USER: "hapi_iis_web"
       POSTGRES_PASSWORD: "SicMundusCreatusEst"
-  #    volumes:
-  #      - "./src/main/database/create-postgresql-for-hapi-fhir.sql:/docker-entrypoint-initdb.d/3.sql"
-  #      - hapi-fhir-postgres:/var/lib/postgresql/data
+    volumes:
+      - ./src/main/database/create-postgresql-for-hapi-fhir.sql:/docker-entrypoint-initdb.d/3.sql
+#        - hapi-fhir-postgres:/var/lib/postgresql/data
   #    ports:
   #      - "5432:5432"
   iis-sandbox-mysql:
@@ -19,6 +25,12 @@ services:
     command:
       --lower_case_table_names=1
     restart: always
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:3306/iis_alongside_jpa" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
     environment:
       MYSQL_USER: 'iis_web'
       MYSQL_PASSWORD: 'SharkBaitHooHaHa'
@@ -37,6 +49,11 @@ services:
     restart: on-failure
     ports:
       - "8081:8080"
+    depends_on:
+      hapi-fhir-postgresql:
+        condition: service_healthy
+      iis-sandbox-mysql:
+        condition: service_healthy
 
 volumes:
   hapi-fhir-postgres:
