--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,18 @@ services:
     image: postgres:13-alpine
     container_name: hapi-fhir-postgres
     restart: always
-    healthcheck:
-      test: pg_isready -d hapi_fhir_iis -U $$POSTGRES_USER
-      interval: 5s
-      timeout: 5s
-      retries: 5
-      start_period: 5s
     environment:
       POSTGRES_DB: "hapi_fhir_iis"
       POSTGRES_USER: "hapi_iis_web"
       POSTGRES_PASSWORD: "SicMundusCreatusEst"
-    volumes:
-      - ./src/main/database/create-postgresql-for-hapi-fhir.sql:/docker-entrypoint-initdb.d/3.sql
+    healthcheck:
+      test: pg_isready -d hapi_fhir_iis -U $$POSTGRES_USER
+      interval: 8s
+      timeout: 10s
+      retries: 15
+      start_period: 5s
+#    volumes:
+#      - ./database/create-postgresql-for-hapi-fhir.sql:/docker-entrypoint-initdb.d/3.sql
 #        - hapi-fhir-postgres:/var/lib/postgresql/data
   #    ports:
   #      - "5432:5432"
