--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,10 @@ services:
       POSTGRES_USER: "hapi_iis_web"
       POSTGRES_PASSWORD: "SicMundusCreatusEst"
     healthcheck:
-      test: pg_isready -d hapi_fhir_iis -U $$POSTGRES_USER
+      test: pg_isready -d $$POSTGRES_DB -U $$POSTGRES_USER
       interval: 8s
       timeout: 10s
-      retries: 15
+      retries: 10
       start_period: 5s
 #    volumes:
 #      - ./database/create-postgresql-for-hapi-fhir.sql:/docker-entrypoint-initdb.d/3.sql
