--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,13 @@
 <!--            <version>2.6.8</version>-->
 <!--        </dependency>-->
 
+<!--        <dependency>-->
+<!--&lt;!&ndash;            https://github.com/usnistgov/fhirAdapter &ndash;&gt;-->
+<!--            <groupId>gov.nist.fhir.adapter</groupId>-->
+<!--            <artifactId>fhirAdapter</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
