--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -74,10 +74,10 @@ spring:
 hapi:
   fhir:
     ### This enables the swagger-ui at /fhir/swagger-ui/index.html as well as the /fhir/api-docs (see https://hapifhir.io/hapi-fhir/docs/server_plain/openapi.html)
-    openapi_enabled: true
+#    openapi_enabled: true
     ### This is the FHIR version. Choose between, DSTU2, DSTU3, R4 or R5
     fhir_version: R5
-    #    fhir_version: R5
+    #    fhir_version: R4
     ### enable to use the ApacheProxyAddressStrategy which uses X-Forwarded-* headers
     ### to determine the FHIR server address
     #   use_apache_address_strategy: false
@@ -233,9 +233,20 @@ spring:
 ## Dev profile only properties to set up with H2
 ---
 spring:
-  config.activate.on-profile: dev
+  config.activate.on-profile: dev-r5
   datasource:
-    url: 'jdbc:h2:file:./target/database/h2'
+    url: 'jdbc:h2:file:./data-h2/r5'
     username: sa
     password: null
     driverClassName: org.h2.Driver
+---
+spring:
+  config.activate.on-profile: dev-r4
+  datasource:
+    url: 'jdbc:h2:file:./data-h2/r4'
+    username: sa
+    password: null
+    driverClassName: org.h2.Driver
+hapi:
+  fhir:
+    fhir_version: R4
