--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   hapi-fhir-postgresql:
     image: postgres:13-alpine
     container_name: hapi-fhir-postgres
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_DB: "hapi_fhir_iis"
       POSTGRES_USER: "hapi_iis_web"
@@ -24,7 +24,7 @@ services:
     container_name: iis-sandbox-mysql
     command:
       --lower_case_table_names=1
-    restart: always
+    restart: unless-stopped
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:3306/iis_alongside_jpa" ]
       interval: 5s
@@ -46,7 +46,7 @@ services:
 #      - IIS_MYSQL_URL=jdbc:mysql://iis-sandbox-mysql:3306/iis_alongside_jpa
 #      - SPRING_DATASOURCE_URL=jdbc:postgresql://hapi-fhir-postgres:5432/hapi_fhir_iis
 #      - spring.datasource.url=jdbc:postgresql://hapi-fhir-postgres:5432/hapi_fhir_iis
-    restart: on-failure
+    restart: unless-stopped
     ports:
       - "8081:8080"
     depends_on:
