Test on Servlets , fixes on Servlets with R4 Configuration

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <artifactId>iis-sandbox</artifactId>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <logback-classic.version>1.2.11</logback-classic.version>
         <slf4j-api.version>1.7.25</slf4j-api.version>
 <!--        <spring.version>6.1.1</spring.version>-->
@@ -49,17 +49,17 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>org.mitre.synthea</groupId>
-            <artifactId>synthea</artifactId>
-            <version>3.2.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>ca.uhn.hapi.fhir</groupId>
-                    <artifactId>*</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.mitre.synthea</groupId>-->
+        <!--            <artifactId>synthea</artifactId>-->
+        <!--            <version>3.2.0</version>-->
+        <!--            <exclusions>-->
+        <!--                <exclusion>-->
+        <!--                    <groupId>ca.uhn.hapi.fhir</groupId>-->
+        <!--                    <artifactId>*</artifactId>-->
+        <!--                </exclusion>-->
+        <!--            </exclusions>-->
+        <!--        </dependency>-->
 
         <!-- IIS Sandbox dependencies -->
         <dependency>
